Resolves: tdf#96285 restore bodge for unresizable windows with no min size set

Change-Id: Ia1af11514f6096ac55d561f729bbcba9ee5b0b14
(cherry picked from commit e1df21cfe0318bf287ae8ce29261d4759c49bd5a)