vcl/inc/unx/gtk/gtkframe.hxx
@@ -199,6 +199,8 @@ class GtkSalFrame : public SalFrame, public X11WindowProvider
     Rectangle                       m_aRestorePosSize;
 
 #if GTK_CHECK_VERSION(3,0,0)
+    long                            m_nWidthRequest;
+    long                            m_nHeightRequest;
     cairo_region_t*                 m_pRegion;
 #else
     GdkRegion*                      m_pRegion;
